[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/characters/adult_female/head_1.png" type="Texture" id=1]
[ext_resource path="res://theme/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/main.gd" type="Script" id=3]
[ext_resource path="res://sprites/characters/adult_female/body_1.png" type="Texture" id=4]
[ext_resource path="res://scenes/shader.tres" type="Material" id=5]

[sub_resource type="StyleBoxEmpty" id=3]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Front/Control/Node2D/Body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Front/Control/Node2D/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 0, 3, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Front/Control/Node2D/Head:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Front/Control/Node2D/Head:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 0, 3, 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Front/Control/Node2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Back/Control/Node2D/Body:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Back/Control/Node2D/Body:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 1, 4, 1 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Back/Control/Node2D/Head:flip_h")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Back/Control/Node2D/Head:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 1, 4, 1 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Back/Control/Node2D:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Side/Control/Node2D/Body:frame")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 2, 6, 2 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Side/Control/Node2D/Head:frame")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.00163966, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 2, 6, 2 ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.164706, 0.403922, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Marg" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Marg"]
margin_left = 8.0
margin_top = 8.0
margin_right = 952.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="VBox" type="VBoxContainer" parent="Marg/HBox"]
margin_right = 234.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Genders" type="OptionButton" parent="Marg/HBox/VBox"]
margin_right = 234.0
margin_bottom = 35.0
mouse_default_cursor_shape = 2
text = "Gender"

[node name="Ages" type="OptionButton" parent="Marg/HBox/VBox"]
margin_top = 39.0
margin_right = 234.0
margin_bottom = 74.0
mouse_default_cursor_shape = 2
text = "Age"

[node name="Options" type="OptionButton" parent="Marg/HBox/VBox"]
margin_top = 78.0
margin_right = 234.0
margin_bottom = 113.0
mouse_default_cursor_shape = 2
text = "Options"

[node name="GridPanel" type="PanelContainer" parent="Marg/HBox/VBox"]
margin_top = 117.0
margin_right = 234.0
margin_bottom = 446.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Marg/HBox/VBox/GridPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 226.0
margin_bottom = 321.0
custom_styles/bg = SubResource( 3 )

[node name="Grid" type="GridContainer" parent="Marg/HBox/VBox/GridPanel/ScrollContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 216.0
margin_bottom = 311.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 3

[node name="Save" type="Button" parent="Marg/HBox/VBox"]
margin_top = 450.0
margin_right = 234.0
margin_bottom = 485.0
text = "Save"

[node name="Credits" type="Button" parent="Marg/HBox/VBox"]
margin_top = 489.0
margin_right = 234.0
margin_bottom = 524.0
text = "Credits"

[node name="VBox2" type="VBoxContainer" parent="Marg/HBox"]
margin_left = 242.0
margin_right = 944.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/separation = 8

[node name="HBox" type="HBoxContainer" parent="Marg/HBox/VBox2"]
margin_right = 702.0
margin_bottom = 39.0
custom_constants/separation = 8

[node name="Skin" type="PanelContainer" parent="Marg/HBox/VBox2/HBox"]
margin_right = 347.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="Marg/HBox/VBox2/HBox/Skin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 339.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Marg/HBox/VBox2/HBox/Skin/VBox"]
margin_right = 331.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Skin Color"

[node name="Grid" type="GridContainer" parent="Marg/HBox/VBox2/HBox/Skin/VBox"]
margin_top = 23.0
margin_right = 331.0
margin_bottom = 23.0
size_flags_horizontal = 3
columns = 4

[node name="Hair" type="PanelContainer" parent="Marg/HBox/VBox2/HBox"]
margin_left = 355.0
margin_right = 702.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="Marg/HBox/VBox2/HBox/Hair"]
margin_left = 8.0
margin_top = 8.0
margin_right = 339.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="Marg/HBox/VBox2/HBox/Hair/VBox"]
margin_right = 331.0
margin_bottom = 19.0
text = "Hair Color"

[node name="Grid" type="GridContainer" parent="Marg/HBox/VBox2/HBox/Hair/VBox"]
margin_top = 23.0
margin_right = 331.0
margin_bottom = 23.0
size_flags_vertical = 3
columns = 14

[node name="VBox" type="VBoxContainer" parent="Marg/HBox/VBox2"]
margin_top = 47.0
margin_right = 702.0
margin_bottom = 524.0
size_flags_vertical = 3
custom_constants/separation = 8

[node name="SpritePanel" type="PanelContainer" parent="Marg/HBox/VBox2/VBox"]
margin_right = 702.0
margin_bottom = 234.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Marg/HBox/VBox2/VBox/SpritePanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 694.0
margin_bottom = 226.0

[node name="Label" type="Label" parent="Marg/HBox/VBox2/VBox/SpritePanel/VBox"]
margin_right = 686.0
margin_bottom = 19.0
text = "Spritesheet Preview"
align = 1

[node name="Center" type="CenterContainer" parent="Marg/HBox/VBox2/VBox/SpritePanel/VBox"]
margin_top = 23.0
margin_right = 686.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Body" type="TextureRect" parent="Marg/HBox/VBox2/VBox/SpritePanel/VBox/Center"]
material = ExtResource( 5 )
margin_left = 119.0
margin_top = 33.0
margin_right = 567.0
margin_bottom = 161.0
rect_min_size = Vector2( 448, 128 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Head" type="TextureRect" parent="Marg/HBox/VBox2/VBox/SpritePanel/VBox/Center"]
material = ExtResource( 5 )
margin_left = 119.0
margin_top = 33.0
margin_right = 567.0
margin_bottom = 161.0
rect_min_size = Vector2( 448, 128 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="AnimPanel" type="PanelContainer" parent="Marg/HBox/VBox2/VBox"]
margin_top = 242.0
margin_right = 702.0
margin_bottom = 477.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Marg/HBox/VBox2/VBox/AnimPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 694.0
margin_bottom = 227.0

[node name="Label" type="Label" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox"]
margin_right = 686.0
margin_bottom = 19.0
text = "Animated Preview"
align = 1

[node name="HBox" type="HBoxContainer" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox"]
margin_top = 23.0
margin_right = 686.0
margin_bottom = 219.0
size_flags_vertical = 3

[node name="Front" type="CenterContainer" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox"]
margin_right = 226.0
margin_bottom = 196.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox/Front"]
margin_left = 113.0
margin_top = 98.0
margin_right = 113.0
margin_bottom = 98.0

[node name="Node2D" type="Node2D" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox/Front/Control"]
position = Vector2( 0, 1 )

[node name="Body" type="Sprite" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox/Front/Control/Node2D"]
material = ExtResource( 5 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
hframes = 7
frame = 3

[node name="Head" type="Sprite" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox/Front/Control/Node2D"]
material = ExtResource( 5 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 7
frame = 3

[node name="Back" type="CenterContainer" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox"]
margin_left = 230.0
margin_right = 456.0
margin_bottom = 196.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox/Back"]
margin_left = 113.0
margin_top = 98.0
margin_right = 113.0
margin_bottom = 98.0

[node name="Node2D" type="Node2D" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox/Back/Control"]
position = Vector2( 0, 1 )

[node name="Body" type="Sprite" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox/Back/Control/Node2D"]
material = ExtResource( 5 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
hframes = 7
frame = 4

[node name="Head" type="Sprite" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox/Back/Control/Node2D"]
material = ExtResource( 5 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 7
frame = 4

[node name="Side" type="CenterContainer" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox"]
margin_left = 460.0
margin_right = 686.0
margin_bottom = 196.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox/Side"]
margin_left = 113.0
margin_top = 98.0
margin_right = 113.0
margin_bottom = 98.0

[node name="Node2D" type="Node2D" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox/Side/Control"]

[node name="Body" type="Sprite" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox/Side/Control/Node2D"]
material = ExtResource( 5 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
hframes = 7
frame = 5

[node name="Head" type="Sprite" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox/Side/Control/Node2D"]
material = ExtResource( 5 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 7
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Marg/HBox/VBox2/VBox/AnimPanel/VBox/HBox"]
anims/default = SubResource( 4 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 724.0
margin_bottom = 409.0
rect_min_size = Vector2( 720, 405 )
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/game_development/projects/p_sprite_gen"
current_path = "/game_development/projects/p_sprite_gen/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsPop" type="PopupPanel" parent="."]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsPop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
bbcode_enabled = true
bbcode_text = "[center]Credits[/center]
- Art from Pokémon FireRed / LeafGreen (obviously)
- Made with [url=(https://godotengine.org/]Godot[/url] 3.3.2
- [url=https://github.com/Pukkah/HTML5-File-Exchange-for-Godot]HTML5 Javascript image download plugin[/url] by laame"
text = "Credits
- Art from Pokémon FireRed / LeafGreen (obviously)
- Made with Godot 3.3.2
- HTML5 Javascript image download plugin by laame"
__meta__ = {
"_edit_lock_": true
}

[node name="Message" type="PopupPanel" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 120, 40 )

[node name="Label" type="Label" parent="Message"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Image saved!"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="Marg/HBox/VBox/Genders" to="." method="_on_option_selected" binds= [ "_cur_gender" ]]
[connection signal="item_selected" from="Marg/HBox/VBox/Ages" to="." method="_on_option_selected" binds= [ "_cur_age" ]]
[connection signal="item_selected" from="Marg/HBox/VBox/Options" to="." method="_on_option_selected" binds= [ "_cur_option" ]]
[connection signal="pressed" from="Marg/HBox/VBox/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Marg/HBox/VBox/Credits" to="." method="_on_credits_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_selected"]
